# PepperPrescriptionDemo

./: 76%haralick_.pkl  AI_model.py  PepperPrescriptionAI.pkl  README.md  app.py  config.cfg  database.db  diseases.csv  environment.yml  forms.py  haralick_AI_model.py  main.py  models.py  pyproject.toml  requirements.txt  trained_model.pkl  views.py
instance/: database.db
static/css/: main.css
templates/: aboutus.html  diseases.html  history.html  home.html  index.html  index2.html  login.html  plants.html  profile.html  register.html  reset.html  reset_with_token.html  signup.html
