[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^3.0.3"
numpy = "^1.24.2"
opencv-python = "^4.7.0"
scikit-learn = "^1.2.2"
torchvision = "^0.15.1"
scikit-image = "^0.20.0"
xds-protos = "^0.0.11"
matplotlib = "^3.7.1"
Flask-Bcrypt = "^1.0.1"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"
Flask-Login = "^0.6.2"
traitlets = "^5.9.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"